--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,10 @@ body {
 .navbar .nav-item {
     font-size: 1.4rem;
     padding-right: 20px; }
+
+#amenities {
+    background-color: #e30000;
+    color: white;
+    padding-top: 5%;
+    padding-bottom: 3%;
+}
