--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 body {
-    margin-top: 105px; }
+    margin-top: 105px;
+    font-family: 'Lato', sans-serif;
+}
 
 .navbar {
     box-shadow: 2px 2px 5px #3292a6;
